# Kraken

./: .flake8  .gitignore  404.html  CNAME  Dockerfile  Is.py  README.md  index.html  mkdocs.yml  objects.inv  opensearch.py  py.py  pyproject.toml  sitemap.xml  test.sh
.github/workflows/: compendium.yml
builds/: docker-compose.yaml
docs/: index.md
search/: search_index.json
src/app/: config.py  confluence_to_md.py  update_mkdocs_nav.py
src/util/: confluence_client.py  file_writer.py  utils.py
src/util/logging/: formatter.py  logger.py  logging_config.py
src/util/markdown/: markdown_converter.py  markdown_parser.py  markdown_parser_config.py  parser_config.py  table_html_transformer.py
src/util/markdown/macros/: code_macro_handler.py  gliffy_macro_handler.py  table_html_transformer.py
