[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "A production-ready Python template with advanced features."
authors = ["Unknown"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.21.0"
flake8 = "^7.1.2"
black = "^25.1.0"
